FreqAnalysis now plays audio from a wave file and calculates 256 sample FFT into an 8 bin IORef. This is rendered using multiple coloured bars in GL.

--- a/README
+++ b/README
@@ -1,1 +1,16 @@
+Author: Guy Burton
+Date Edited: 15/05/2011
+
+All code is free to use with no required accreditation or licensing. No warranty of any kind is provided with the software.
+
+Introduction
+============
 This is a simple project which reads in a wave file and plays it whilst visualizing the frequency content with openGL. It is written in response to a Hoodlums meetup in London on May 12th 2011.
+
+Requirements
+============
+OpenGL
+PulseAudio-simple
+WAVE
+pure-FFT
+(all available on cabal)
